# command64-os

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  COMMAND64OS.md  GEMINI.md  LICENSE  Makefile  README.md
.agents/workflows/: artifact-tracking.md  documentation-maintenance.md
brain/: BUGS.md  COMMANDS.md  EXTERNAL.md  KNOWLEDGE.md  MEMORY.md  task.md
brain/analysis/: 2026-07-12-ms-dos-4.0-parity-comparison.md  claude_debug_doc_review.md  claude_label_com_behavior.md  claude_peer_review_label_behavior.md  gemini_label_com_behavior.md  peer_review_label_behavior.md
brain/ca65/: README.md  ca65.md  ld65.md
brain/kickassembler/: KickAssembler.md
brain/plans/: 2026-05-02_phase2a-command64-code-review-remediation.md  2026-05-11-api-vmm-bug-remediation.md  2026-05-11-round3-remediation.md  2026-05-11_command64-code-review-remediation.md  2026-05-11_command64-remediation-round2.md  2026-05-11_command64-remediation-round3.md  2026-05-13-code-review-remediation.md  2026-05-13-debug-asm-zp-alias-and-listbuf-overflow.md  2026-05-13-unified-build-system.md  2026-05-13_remediation-pass.md  2026-05-13_unified-remediation-plan.md  2026-05-14-env-var-remediation.md  2026-07-02-code-review-remediation.md  2026-07-04-binary-relocator-phase-b.md  2026-07-08-ca65-adoption-and-spike-migration.md  2026-07-09-ca65-phase6-policy-docs-and-changelog.md  2026-07-09-debug-ca65-migration.md  2026-07-09-edlin-implementation-phases.md  2026-07-09-edlin-port-feasibility.md  2026-07-10-file-io-readst-bug-fix.md  2026-07-10-fileopen-prg-type-default-fix.md  2026-07-11-type-lf-newline-remediation.md  2026-07-12-date-time-command-phase1-plan.md  2026-07-12-date-time-command.md  2026-07-14-comp-command-implementation-plan.md  2026-07-14-conway-multiverse-implementation-plan.md  2026-07-14-pacman-ca65-rewrite-plan.md  2026-07-15-pacman-phase3-code-review-remediation.md  2026-07-15_pacman-ghost-house-remediation-plan.md  2026-07-16-casm-assembler-implementation-plan.md  2026-07-16-casm-phase1-native-application-scaffold.md  2026-07-16-casm-phase2-cli-file-services.md  2026-07-16-casm-phase3-source-stream-lexer.md  2026-07-16-casm-phase3-wp03-shared-abi-bounded-state.md  2026-07-16-casm-phase3-wp04-rewindable-source-backend.md  2026-07-16-casm-phase3-wp05-newlines-provenance.md  2026-07-16-casm-phase3-wp06-rewind-line-api.md  2026-07-16-casm-phase3-wp07-minimal-lexer-core.md  2026-07-16-casm-phase3-wp08-textual-numeric-tokens.md  2026-07-16-casm-phase3-wp09-mnemonic-classification.md  (+64 more)
brain/research/: 2026-07-02_full-codebase-review_raw_findings.md  2026-07-03_full-codebase-review_raw_findings.md  Conway Multiverse and Generalizing Life Rules.md  Extracting Commodore 64 File Sizes via Assembly Direct Access.md  conway_multiverse_transcript.txt  debug_doc_review_raw_findings.md  debug_references.md  label_com_behavior.md  volume_name_asm.md
brain/reviews/: 2026-05-02_phase2a-command64.md  2026-05-11_command64-bug-verification.md  2026-05-11_command64-full-code-review.md  2026-05-11_command64-phase2c-api-vmm.md  2026-05-11_command64-round3-gemini-review.md  2026-05-12_debug-msdos-spec-alignment.md  2026-05-12_debug-utility-review.md  2026-05-13_phase3-phase4-remediation.md  2026-06-28_debug-phase1-peer-review.md  2026-06-30_debug-doc-review.md  2026-07-02_full-codebase-review.md  2026-07-03_full-codebase-review.md  2026-07-05_relocator_and_error_channel_review.md  2026-07-08_ca65_adoption_and_spike_migration_review.md  2026-07-10_fileopen_prg_type_default_fix_peer_review.md  2026-07-15-pacman-phase3-review.md  2026-07-15_pacman-ghost-house-review.md  2026-07-15_pacman-ghost-house-secondary-review.md  2026-07-16-casm-debug-assembler-reuse.md
brain/specs/: 2026-05-13-app-manager-design.md  2026-05-13-unified-build-system-design.md
brain/walkthroughs/: 2026-05-14-env-var-remediation.md  2026-06-26-vol-label-remediation.md  2026-06-30-debug-phase3-breakpoint-debugger.md  2026-07-05-binary-relocator.md  _TEMPLATE.md  debug-test-plan.md  (+43 more)
cmake/: Ca65.cmake  FindCa65.cmake  FindKickAss.cmake  FindOscar64.cmake  Findcc1541.cmake  GenerateCasmTestFixtures.cmake  IncrementBuildNumber.cmake  KickAssembler.cmake  Oscar64.cmake  PackRelease.cmake  cc1541.cmake
docs/: api-reference.md  codebase-reference.md  debug-test-plan.md  programmers-reference.md  user-manual.md  vmm-api.md
include/: command64.inc  vmm.inc
release/: command64.prg  debug.prg  image.d64  test.d64
scripts/: hex_manifest_to_bin.py  pacman_maze_reachability.py
src/: AGENTS.md  command64.asm
tests/: AGENTS.md  build_tests.sh  edlin_test.txt  edlin_test2.txt  edlin_test_full.txt  image.d64  testcmds.d64
tools/: README.md  cc1541  command64.reu.reu  create_d64.py  reloc.py
wiki/: AGENTS.md  Home.md  api-reference.md  casm-programmers-reference.md  casm-utility.md  codebase-knowledge-graph.md  conway-utility.md  debug-io-test-plan.md  debug-test-plan.md  debug-utility.md  edlin-utility.md  hardware-gotchas.md  label-utility.md  ms-dos-comparison.md  pacman-utility.md  programmers-reference.md  user-manual.md  vmm-api.md
(+155 files in other folders)
